# high_performance_key_overlay

./: readme.md
custom/egui-0.29.1/crates/eframe/src/native/: run.rs
main/: .gitignore  Cargo.toml
main/app_kps_dashboard/: Cargo.toml
main/app_kps_dashboard/src/: main.rs
main/app_main/: Cargo.toml
main/app_main/src/: main.rs
main/app_main_vk/: Cargo.toml
main/app_main_vk/src/: main.rs
main/app_setting/: Cargo.toml
main/app_setting/src/: main.rs
main/common/: Cargo.toml
main/common/src/: app_kps_dashboard.rs  global_listener.rs  global_listener_app.rs  key.rs  key_bar.rs  key_draw_cache.rs  key_drawer.rs  key_handler.rs  key_message.rs  key_overlay.rs  key_property.rs  key_shader.rs  key_shader.wgsl  kps_dashboard_app.rs  lib.rs  main_app.rs  message_dialog.rs  msg_hook.rs  setting.rs  u_color32.rs  ucolor32.rs  utils.rs
main/common/src/app_main/: key_overlay.rs  key_shader.rs  key_shader.wgsl  mod.rs
main/common/src/app_main_vk/: common.fs  common.glsl  key_overlay.rs  mod.rs  shaders.rs
main/common/src/app_main_vk/key_bar/: key_bar.fs  mod.rs
main/common/src/app_main_vk/numbers/: mod.rs  numbers.fs  numbers.vs
main/common/src/app_main_vk/press_rect/: mod.rs  press_rect.fs  press_rect.vs
main/common/src/app_main_vk/static_overlay/: frame.fs  frame.vs  init.rs  mod.rs  static_overlay.fs  text.fs  text.rs  text.vs
main/common/src/app_setting/: mod.rs  setting_area.rs
main/common/src/key_overlay_core/: key_bar.rs  key_draw_cache.rs  key_handler.rs  key_message.rs  key_property.rs  mod.rs
main/common/src/main_app/: key_overlay.rs  key_shader.rs  mod.rs
main/common/src/main_app_vk/: common.fs  key_overlay.rs  mod.rs  shaders.rs
main/common/src/main_app_vk/key_bar/: key_bar.vs  mod.rs
main/common/src/main_app_vk/numbers/: mod.rs  numbers.fs
main/common/src/main_app_vk/press_rect/: mod.rs
main/common/src/main_app_vk/static_overlay/: frame.rs  init.rs  mod.rs  static_overlay.vs  text.fs  text.rs  text.vs
main/common/src/setting_app/: menu.rs  mod.rs  setting_area.rs
main/default_settings/: 26K.json  4K.json  7K.json  HelloWorld.json  单个计数器.json
main/global_listener_app/: Cargo.toml
main/kps_dashboard_app/: Cargo.toml
main/kps_dashboard_app/src/: main.rs
main/main_app/src/: main.rs
main/main_app_vk/: Cargo.toml
main/main_app_vk/src/: main.rs
main/setting_app/: Cargo.toml
main/setting_app/src/: main.rs
