[workspace]
resolver = "2"
members = ["common", "kps_dashboard_app", "main_app", "setting_app"]

[workspace.dependencies]
common = { path = "./common" }

eframe = { version = "0.32.0", default-features = false, features = ["wgpu"] }
egui = { version = "0.32.0", default-features = false, features = ["serde"] }
epaint = { version = "0.32.0", default-features = false }
wgpu = { version = "25.0.2", default-features = false, features = ["vulkan", "gles"] }

serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false, features = ["std"] }
font-kit = { version = "0.14.3", default-features = false, features = ["source"] }
owned_ttf_parser = { version = "0.25.0", default-features = false }
crossbeam-channel = { version = "0.5.15", default-features = false, features = ["std"] }
parking_lot = { version = "0.12.4", default-features = false }
bytemuck = { version = "1.23.1", default-features = false, features = ["derive"] }
rfd = { version = "0.15.3", default-features = false }
image = { version = "0.25.6", default-features = false }
mimalloc = { version = "0.1.47", default-features = false }

windows = { version = "0.61.3", default-features = false, features = [
    "Win32_UI_Input_KeyboardAndMouse",
] }

[workspace.dependencies.sak_rs]
git = "https://github.com/Martinplior/sak_rs"
tag = "v0.1.5"
default-features = false
features = ["os_windows_input", "graceful_run"]
