[workspace]
resolver = "2"
members = ["common", "kps_dashboard_app", "main_app", "main_app_vk", "setting_app"]

[workspace.dependencies]
common = { path = "./common" }

eframe = { version = "0.32.0", default-features = false, features = ["wgpu"] }
egui = { version = "0.32.0", default-features = false, features = ["serde"] }
epaint = { version = "0.32.0", default-features = false }
wgpu = { version = "25.0.2", default-features = false, features = ["vulkan", "gles"] }

serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false, features = ["std"] }
parking_lot = { version = "0.12.4", default-features = false }
bytemuck = { version = "1.23.1", default-features = false, features = ["derive"] }
rfd = { version = "0.15.3", default-features = false }
image = { version = "0.25.6", default-features = false }
mimalloc = { version = "0.1.47", default-features = false }

windows = { version = "0.61.3", default-features = false, features = [
    "Win32_UI_Input_KeyboardAndMouse",
] }

vulkano = { version = "0.35.1", default-features = false, features = ["macros"] }
vulkano-shaders = { version = "0.35.0", default-features = false }
winit = { version = "0.30.11", default-features = false, features = ["rwh_06"] }
ahash = { version = "0.8.12", default-features = false, features = ["default"] }
fontdue = { version = "0.9.3", default-features = false, features = ["default", "parallel"] }

[workspace.dependencies.sak_rs]
git = "https://github.com/Martinplior/sak_rs"
tag = "v0.1.14"
default-features = false
features = ["os_windows_input", "graceful_run", "sync", "font", "graphics_renderer_vulkan"]
