[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
sak_rs = { workspace = true }

eframe = { workspace = true }
egui = { workspace = true }
epaint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
font-kit = { workspace = true }
owned_ttf_parser = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }
bytemuck = { workspace = true }
windows = { workspace = true }
rfd = { workspace = true }
image = { workspace = true }
mimalloc = { workspace = true }

[lints.clippy]
new_without_default = "allow"
option_map_unit_fn = "allow"
