[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
sak_rs = { workspace = true }

eframe = { workspace = true }
egui = { workspace = true }
epaint = { workspace = true }
wgpu = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
bytemuck = { workspace = true }
windows = { workspace = true }
rfd = { workspace = true }
image = { workspace = true }
mimalloc = { workspace = true }

vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
winit = { workspace = true }
ahash = { workspace = true }
ab_glyph = { workspace = true }

[lints.clippy]
get_first = "allow"
new_without_default = "allow"
option_map_unit_fn = "allow"
unwrap_used = "warn"
